Add shared protocol stack and Fabric 1.21.1 target