@@ -1,8 +1,9 @@
 package stonytark.jammarr.server;
 
 import stonytark.jammarr.core.model.QueueTrack;
-
-
+import stonytark.jammarr.core.network.BoundedStreams;
+import stonytark.jammarr.core.network.HttpTransport;
+import stonytark.jammarr.core.network.UrlConnectionHttpTransport;
 import stonytark.jammarr.core.server.Mp3FrameIndex;
 import stonytark.jammarr.core.server.Mp3CbrNormalizer;
 import stonytark.jammarr.core.server.PlexException;
@@ -10,31 +11,25 @@ import com.google.gson.JsonArray;
 import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
-import stonytark.jammarr.config.JammarrConfig;
+import stonytark.jammarr.core.platform.JammarrSettings;
 import stonytark.jammarr.network.JammarrPayloads;
 import java.io.IOException;
-import java.io.InputStream;
 import java.net.URI;
+import java.net.SocketTimeoutException;
+import java.net.URL;
 import java.net.URLEncoder;
-import java.net.http.HttpTimeoutException;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
 import java.time.Duration;
 import java.util.ArrayList;
+import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 import java.util.UUID;
-import java.util.concurrent.Executors;
-import java.util.concurrent.ScheduledExecutorService;
-import java.util.concurrent.ScheduledFuture;
-import java.util.concurrent.TimeUnit;
-import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.function.Supplier;
 
 public final class PlexClient implements StationCatalog {
@@ -45,12 +40,10 @@ public final class PlexClient implements StationCatalog {
     static final long MAX_TRANSCODE_BYTES = 256L * 1024 * 1024;
     static final long MAX_TRACK_DURATION_MS = 3L * 60 * 60 * 1_000;
     private static final Duration TRANSCODE_READ_TIMEOUT = Duration.ofMinutes(3);
-    private static final ScheduledExecutorService READ_TIMEOUTS = Executors.newSingleThreadScheduledExecutor(
-            Thread.ofPlatform().daemon(true).name("jammarr-http-timeouts").factory());
     public record Page(List<JammarrPayloads.MediaItem> items, boolean hasMore) {}
     public record SonicStatus(JammarrPayloads.SonicCapability capability, String message) {}
     public record SonicResult(JammarrPayloads.MediaItem item, double distance) {}
-    private final HttpClient http;
+    private final HttpTransport http;
     private final Duration requestTimeout;
     private final Supplier<String> configuredUrl;
     private final Supplier<String> configuredToken;
@@ -61,7 +54,7 @@ public final class PlexClient implements StationCatalog {
     private volatile String libraryKey;
     private volatile String machineIdentifier;
 
-    public PlexClient() { this(() -> JammarrConfig.PLEX_URL.get(), JammarrConfig::plexToken, () -> JammarrConfig.MUSIC_LIBRARY.get(), Duration.ofSeconds(15)); }
+    public PlexClient() { this(() -> JammarrSettings.plexUrl(), JammarrSettings::plexToken, () -> JammarrSettings.musicLibrary(), Duration.ofSeconds(15)); }
     PlexClient(String url, String token, String library) { this(() -> url, () -> token, () -> library, Duration.ofSeconds(15)); }
     PlexClient(String url, String token, String library, Duration requestTimeout) { this(() -> url, () -> token, () -> library, requestTimeout); }
     PlexClient(String url, String token, String library, Duration requestTimeout, int maxJsonBytes, long maxTranscodeBytes) {
@@ -77,8 +70,7 @@ public final class PlexClient implements StationCatalog {
         this.maxJsonBytes = maxJsonBytes;
         this.maxTranscodeBytes = maxTranscodeBytes;
         this.transcodeReadTimeout = transcodeReadTimeout;
-        this.http = HttpClient.newBuilder().version(HttpClient.Version.HTTP_1_1)
-                .connectTimeout(requestTimeout).followRedirects(HttpClient.Redirect.NORMAL).build();
+        this.http = new UrlConnectionHttpTransport();
     }
 
     public void validate() throws IOException, InterruptedException {
@@ -368,35 +360,28 @@ public final class PlexClient implements StationCatalog {
                 + "&X-Plex-Provides=player&X-Plex-Client-Profile-Name=Generic"
                 + "&X-Plex-Client-Profile-Extra=" + encode(profile)
                 + "&X-Plex-Token=" + encode(token());
-        HttpRequest request = HttpRequest.newBuilder(URI.create(baseUrl() + "/music/:/transcode/universal/start.mp3?" + params))
-                .GET().timeout(Duration.ofMinutes(3)).build();
-        HttpResponse<InputStream> response;
-        try { response = http.send(request, HttpResponse.BodyHandlers.ofInputStream()); }
-        catch (HttpTimeoutException e) { throw new PlexException(PlexException.Kind.OFFLINE, "Plex transcode timed out", e); }
-        if (response.statusCode() / 100 != 2) {
-            response.body().close();
-            PlexException.Kind kind = response.statusCode() == 401 || response.statusCode() == 403 ? PlexException.Kind.AUTHENTICATION
-                    : response.statusCode() == 404 ? PlexException.Kind.NOT_FOUND : PlexException.Kind.TRANSCODE;
-            throw new PlexException(kind, "Plex transcode returned HTTP " + response.statusCode());
+        URL url = new URL(baseUrl() + "/music/:/transcode/universal/start.mp3?" + params);
+        HttpTransport.Response response;
+        try {
+            response = http.open("GET", url, Map.of(), timeoutMillis(Duration.ofMinutes(3)), timeoutMillis(transcodeReadTimeout));
+        } catch (SocketTimeoutException timeout) {
+            throw new PlexException(PlexException.Kind.OFFLINE, "Plex transcode timed out", timeout);
         }
-        long declaredLength = response.headers().firstValueAsLong("Content-Length").orElse(-1);
-        if (declaredLength > maxTranscodeBytes) {
-            response.body().close();
-            throw new PlexException(PlexException.Kind.INVALID_RESPONSE, "Plex transcode exceeds the configured safety limit");
-        }
-        AtomicBoolean timedOut = new AtomicBoolean();
-        InputStream body = response.body();
-        ScheduledFuture<?> timeout = READ_TIMEOUTS.schedule(() -> {
-            timedOut.set(true);
-            try { body.close(); } catch (IOException ignored) {}
-        }, transcodeReadTimeout.toMillis(), TimeUnit.MILLISECONDS);
-        try (InputStream in = body; var out = Files.newOutputStream(output, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING)) {
-            copyLimited(in, out, maxTranscodeBytes, "Plex transcode exceeds the configured safety limit");
-        } catch (IOException failure) {
-            if (timedOut.get()) throw new PlexException(PlexException.Kind.OFFLINE, "Plex transcode body timed out", failure);
-            throw failure;
-        } finally {
-            timeout.cancel(false);
+        try (response; var out = Files.newOutputStream(output, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING)) {
+            if (response.statusCode() / 100 != 2) {
+                PlexException.Kind kind = response.statusCode() == 401 || response.statusCode() == 403 ? PlexException.Kind.AUTHENTICATION
+                        : response.statusCode() == 404 ? PlexException.Kind.NOT_FOUND : PlexException.Kind.TRANSCODE;
+                throw new PlexException(kind, "Plex transcode returned HTTP " + response.statusCode());
+            }
+            if (response.contentLength() > maxTranscodeBytes) {
+                throw new PlexException(PlexException.Kind.INVALID_RESPONSE, "Plex transcode exceeds the configured safety limit");
+            }
+            try {
+                BoundedStreams.copy(response.body(), out, maxTranscodeBytes,
+                        "Plex transcode exceeds the configured safety limit");
+            } catch (SocketTimeoutException timeout) {
+                throw new PlexException(PlexException.Kind.OFFLINE, "Plex transcode body timed out", timeout);
+            }
         }
         if (Files.size(output) < 1024) throw new PlexException(PlexException.Kind.INVALID_RESPONSE, "Plex returned an empty audio stream");
     }
@@ -427,28 +412,19 @@ public final class PlexClient implements StationCatalog {
 
     private void ensureLibrary() throws IOException, InterruptedException { if (libraryKey == null) validate(); }
     private JsonObject getJson(String path, String query) throws IOException, InterruptedException {
-        HttpResponse<InputStream> response;
-        try { response = http.send(request(path, query).timeout(requestTimeout).GET().build(), HttpResponse.BodyHandlers.ofInputStream()); }
-        catch (HttpTimeoutException e) { throw new PlexException(PlexException.Kind.OFFLINE, "Plex request timed out", e); }
-        try (InputStream body = response.body()) {
+        HttpTransport.Response response;
+        try { response = open("GET", path, query); }
+        catch (SocketTimeoutException e) { throw new PlexException(PlexException.Kind.OFFLINE, "Plex request timed out", e); }
+        try (response) {
             if (response.statusCode() == 401 || response.statusCode() == 403) throw new PlexException(PlexException.Kind.AUTHENTICATION, "Plex rejected the configured token");
             if (response.statusCode() == 404) throw new PlexException(PlexException.Kind.NOT_FOUND, "Plex item was not found");
             if (response.statusCode() / 100 != 2) throw new PlexException(PlexException.Kind.OFFLINE, "Plex returned HTTP " + response.statusCode());
-            long declaredLength = response.headers().firstValueAsLong("Content-Length").orElse(-1);
-            if (declaredLength > maxJsonBytes) throw new PlexException(PlexException.Kind.INVALID_RESPONSE, "Plex metadata response exceeds the safety limit");
-            AtomicBoolean timedOut = new AtomicBoolean();
-            ScheduledFuture<?> timeout = READ_TIMEOUTS.schedule(() -> {
-                timedOut.set(true);
-                try { body.close(); } catch (IOException ignored) {}
-            }, requestTimeout.toMillis(), TimeUnit.MILLISECONDS);
+            if (response.contentLength() > maxJsonBytes) throw new PlexException(PlexException.Kind.INVALID_RESPONSE, "Plex metadata response exceeds the safety limit");
             byte[] bytes;
             try {
-                bytes = readLimited(body, maxJsonBytes, "Plex metadata response exceeds the safety limit");
-            } catch (IOException failure) {
-                if (timedOut.get()) throw new PlexException(PlexException.Kind.OFFLINE, "Plex metadata body timed out", failure);
-                throw failure;
-            } finally {
-                timeout.cancel(false);
+                bytes = BoundedStreams.read(response.body(), maxJsonBytes, "Plex metadata response exceeds the safety limit");
+            } catch (SocketTimeoutException timeout) {
+                throw new PlexException(PlexException.Kind.OFFLINE, "Plex metadata body timed out", timeout);
             }
             JsonElement parsed = JsonParser.parseString(new String(bytes, StandardCharsets.UTF_8));
             if (!parsed.isJsonObject()) throw new IllegalStateException("root is not an object");
@@ -459,28 +435,19 @@ public final class PlexClient implements StationCatalog {
     }
 
     private JsonObject postJson(String path, String query) throws IOException, InterruptedException {
-        HttpResponse<InputStream> response;
-        try { response = http.send(request(path, query).timeout(requestTimeout).POST(HttpRequest.BodyPublishers.noBody()).build(), HttpResponse.BodyHandlers.ofInputStream()); }
-        catch (HttpTimeoutException e) { throw new PlexException(PlexException.Kind.OFFLINE, "Plex request timed out", e); }
-        try (InputStream body = response.body()) {
+        HttpTransport.Response response;
+        try { response = open("POST", path, query); }
+        catch (SocketTimeoutException e) { throw new PlexException(PlexException.Kind.OFFLINE, "Plex request timed out", e); }
+        try (response) {
             if (response.statusCode() == 401 || response.statusCode() == 403) throw new PlexException(PlexException.Kind.AUTHENTICATION, "Plex rejected the configured token");
             if (response.statusCode() == 404) return new JsonObject();
             if (response.statusCode() / 100 != 2) throw new PlexException(PlexException.Kind.INVALID_RESPONSE, "Plex station request returned HTTP " + response.statusCode());
-            long declaredLength = response.headers().firstValueAsLong("Content-Length").orElse(-1);
-            if (declaredLength > maxJsonBytes) throw new PlexException(PlexException.Kind.INVALID_RESPONSE, "Plex station response exceeds the safety limit");
-            AtomicBoolean timedOut = new AtomicBoolean();
-            ScheduledFuture<?> timeout = READ_TIMEOUTS.schedule(() -> {
-                timedOut.set(true);
-                try { body.close(); } catch (IOException ignored) {}
-            }, requestTimeout.toMillis(), TimeUnit.MILLISECONDS);
+            if (response.contentLength() > maxJsonBytes) throw new PlexException(PlexException.Kind.INVALID_RESPONSE, "Plex station response exceeds the safety limit");
             byte[] bytes;
             try {
-                bytes = readLimited(body, maxJsonBytes, "Plex station response exceeds the safety limit");
-            } catch (IOException failure) {
-                if (timedOut.get()) throw new PlexException(PlexException.Kind.OFFLINE, "Plex station body timed out", failure);
-                throw failure;
-            } finally {
-                timeout.cancel(false);
+                bytes = BoundedStreams.read(response.body(), maxJsonBytes, "Plex station response exceeds the safety limit");
+            } catch (SocketTimeoutException timeout) {
+                throw new PlexException(PlexException.Kind.OFFLINE, "Plex station body timed out", timeout);
             }
             JsonElement parsed = JsonParser.parseString(new String(bytes, StandardCharsets.UTF_8));
             if (!parsed.isJsonObject()) throw new IllegalStateException("root is not an object");
@@ -488,28 +455,18 @@ public final class PlexClient implements StationCatalog {
         } catch (RuntimeException malformed) { throw new PlexException(PlexException.Kind.INVALID_RESPONSE, "Plex returned malformed station JSON", malformed); }
     }
 
-    private static byte[] readLimited(InputStream input, int maximumBytes, String message) throws IOException {
-        byte[] bytes = input.readNBytes(maximumBytes + 1);
-        if (bytes.length > maximumBytes) throw new PlexException(PlexException.Kind.INVALID_RESPONSE, message);
-        return bytes;
-    }
-
-    private static void copyLimited(InputStream input, java.io.OutputStream output, long maximumBytes, String message) throws IOException {
-        byte[] buffer = new byte[16 * 1024];
-        long total = 0;
-        for (int read; (read = input.read(buffer)) >= 0;) {
-            if (read == 0) continue;
-            total += read;
-            if (total > maximumBytes) throw new PlexException(PlexException.Kind.INVALID_RESPONSE, message);
-            output.write(buffer, 0, read);
-        }
-    }
-    private HttpRequest.Builder request(String path, String query) {
+    private HttpTransport.Response open(String method, String path, String query) throws IOException {
         String separator = query == null || query.isBlank() ? "" : "?" + query;
-        return HttpRequest.newBuilder(URI.create(baseUrl() + path + separator)).header("Accept", "application/json")
-                .header("X-Plex-Token", token()).header("X-Plex-Product", "Jammarr")
-                .header("X-Plex-Version", "1.0.0").header("X-Plex-Client-Identifier", CLIENT_ID);
+        Map<String, String> headers = new LinkedHashMap<>();
+        headers.put("Accept", "application/json");
+        headers.put("X-Plex-Token", token());
+        headers.put("X-Plex-Product", "Jammarr");
+        headers.put("X-Plex-Version", "1.0.0");
+        headers.put("X-Plex-Client-Identifier", CLIENT_ID);
+        return http.open(method, new URL(baseUrl() + path + separator), headers,
+                timeoutMillis(requestTimeout), timeoutMillis(requestTimeout));
     }
+    private static int timeoutMillis(Duration duration) { return (int)Math.min(Integer.MAX_VALUE, Math.max(1, duration.toMillis())); }
     private static JsonObject container(JsonObject root) { JsonElement e = root.get("MediaContainer"); return e == null || !e.isJsonObject() ? new JsonObject() : e.getAsJsonObject(); }
     private static JsonArray array(JsonObject object, String key) { JsonElement e = object.get(key); return e == null || !e.isJsonArray() ? new JsonArray() : e.getAsJsonArray(); }
     private static String text(JsonObject object, String key) { JsonElement e = object.get(key); return e == null || e.isJsonNull() ? "" : e.getAsString(); }
